--- a/project/src/main/resources/templates/editar_empregado.html
+++ b/project/src/main/resources/templates/editar_empregado.html
@@ -1,4 +1,4 @@
-<div th:fragment="editar_utilizadores_frag">
+<div th:fragment="editar_empregado_frag">
 <div class="section__content section__content--p30">
   <div class="container-fluid">
     <div class="card">
