--- a/project/src/main/resources/templates/listaremp.html
+++ b/project/src/main/resources/templates/listaremp.html
@@ -60,7 +60,7 @@ $(document).ready(function(){
 							</td>
 
 								<td style="width:40%; text-align:center; vertical-align:middle;">
-							<form action="/editar_utilizadores?fragment=editar_utilizadores" method="post">
+							<form action="/editar_empregados?fragment=editar_empregados" method="post">
 								<input class="form-control" name="id" type="hidden" th:value="${parametros.id}"> <!-- Mandar o id para o editar -->
 										<div class="fa-hover col-lg-3 col-md-6">
 										<button type="submit">
