Resolução de mais bugs

--- a/project/src/main/resources/templates/editar_empregado.html
+++ b/project/src/main/resources/templates/editar_empregado.html
@@ -32,6 +32,20 @@
             <input class="form-control" placeholder="" name="password" type="text" th:value="${parametros.password}">
           </div>
 
+          <div class="form-group">
+            <label>Restaurante</label>
+            <select name="id_restaurantes" class="form-control">
+              <span th:each="restaurantlist : ${listrestaurantes}">
+                <span th:if="${parametros['id_restaurante'] == restaurantlist['id']}">
+                    <option th:value="${restaurantlist.id}">[[${restaurantlist.nome}]]</option>
+                </span></span>
+                <span th:each="restaurantlist : ${listrestaurantes}">
+                  <span th:if="${parametros['id_restaurante'] != restaurantlist['id']}">
+                <option th:value="${restaurantlist.id}" >[[${restaurantlist.nome}]]</option></span>
+                </span>
+            </select>
+          </div>
+
           <button type="submit" class="btn btn-primary">Salvar</button>
         </form>
 
