tentativa de dias de semana (edit)

--- a/project/src/main/resources/templates/error.html
+++ b/project/src/main/resources/templates/error.html
@@ -33,6 +33,7 @@
 				<h2>404 - Ocorreu um erro</h2>
 			</div>
 			<a href="http://localhost:8080/erro_session">Voltar ao Inicio</a>
+		<!--th:href="@{/}"-->	
 		</div>
 	</div>
 
