--- a/project/src/main/resources/templates/introduzir_rest.html
+++ b/project/src/main/resources/templates/introduzir_rest.html
@@ -56,13 +56,13 @@
               <label for="exampleInputEmail1">Latitude:</label>
               <input class="form-control" placeholder="4879090877" name="latitude" type="number" required>
             </div>
-            <input type="hidden" name="dia1" value="0" id="dia1">
-            <input type="hidden" name="dia2" value="0" id="dia2">
-            <input type="hidden" name="dia3" value="0" id="dia3">
-            <input type="hidden" name="dia4" value="0" id="dia4">
-            <input type="hidden" name="dia5" value="0" id="dia5">
-            <input type="hidden" name="dia6" value="0" id="dia6">
-            <input type="hidden" name="dia7" value="0" id="dia7">
+            <input type="hidden" name="dia1" value="Encerrado" id="dia1">
+            <input type="hidden" name="dia2" value="Encerrado" id="dia2">
+            <input type="hidden" name="dia3" value="Encerrado" id="dia3">
+            <input type="hidden" name="dia4" value="Encerrado" id="dia4">
+            <input type="hidden" name="dia5" value="Encerrado" id="dia5">
+            <input type="hidden" name="dia6" value="Encerrado" id="dia6">
+            <input type="hidden" name="dia7" value="Encerrado" id="dia7">
           <!--  <input type="time" id="appt" name="appt"
             min="9:00" max="18:00" required>-->
             <div class="form-group">
