--- a/project/src/main/resources/templates/error.html
+++ b/project/src/main/resources/templates/error.html
@@ -32,8 +32,8 @@
 				<h1>Oops!</h1>
 				<h2>404 - Ocorreu um erro</h2>
 			</div>
-			<a href="http://localhost:8080/erro_session">Voltar ao Inicio</a>
-		<!--th:href="@{/}"-->	
+			<a href="http://18.222.203.109:6997/erro_session">Voltar ao Inicio</a>
+		<!--th:href="@{/}"-->
 		</div>
 	</div>
 
