--- a/project/src/main/resources/templates/mainownerprofile.html
+++ b/project/src/main/resources/templates/mainownerprofile.html
@@ -337,7 +337,7 @@
                                             </div>
                                             <div class="account-dropdown__footer">
 
-                                                 <a href="http://localhost:8080/logout">
+                                                 <a href="http://18.222.203.109:6997/logout">
                                                     <i class="zmdi zmdi-power"></i>Sair</a>
                                             </div>
                                         </div>
