--- a/project/src/main/resources/templates/mainempprofile.html
+++ b/project/src/main/resources/templates/mainempprofile.html
@@ -221,7 +221,7 @@
                                     <a href="/login">Login2</a>
                                 </li>
                                 <li>
-                                    <a href="http://localhost:8080/registar">Registar</a>
+                                    <a href="http://18.222.203.109:6997/registar">Registar</a>
                                 </li>
                                 <li>
                                     <a href="forget-pass.html">Forget Password</a>
@@ -343,7 +343,7 @@
                                                 </div>
                                             </div>
                                             <div class="account-dropdown__footer">
-                                              <a href="http://localhost:8080/logout">
+                                              <a href="http://18.222.203.109:6997/logout">
                                                     <i class="zmdi zmdi-power"></i>Logout</a>
                                             </div>
                                         </div>
