enviar procurar por menu e pedidos, categoria, mudanças no model do pedido

--- a/project/src/main/resources/templates/editmenu.html
+++ b/project/src/main/resources/templates/editmenu.html
@@ -50,8 +50,8 @@
             </select>
           </div>
 
-          <div class="form-group"> <label for="exampleTextarea">Ingridientes</label>
-          <textarea class="form-control" name="ingridiente" rows="3" th:inline="text">[[${parametros.ingridiente}]]</textarea>
+          <div class="form-group"> <label for="exampleTextarea">Ingredientes</label>
+          <textarea class="form-control" name="ingrediente" rows="3" th:inline="text">[[${parametros.ingrediente}]]</textarea>
           </div>
 
           <div class="form-group">
