--- a/project/src/main/resources/templates/listar_menu_empregado.html
+++ b/project/src/main/resources/templates/listar_menu_empregado.html
@@ -17,7 +17,7 @@ $(document).ready(function(){
 
 </script>
 
-<div th:fragment="listar_menu_frag">
+<div th:fragment="listar_menuemp_frag">
 
 	<div class="section__content section__content--p30">
 		<div class="container-fluid">
@@ -29,10 +29,9 @@ $(document).ready(function(){
 							<thead>
 								<tr>
 									<th>Prato</th>
-									<th>Preco</th>
+									<th>Preço</th>
 									<th>Categoria</th>
 									<th>Ingrediente</th>
-									<th style="text-align:center;">Ações</th>
 								</tr>
 							</thead>
 									<tbody th:each="parametros : ${menu}">
@@ -45,37 +44,8 @@ $(document).ready(function(){
 									</div></td>
 									<td class="maxme" th:text="${parametros.ingrediente}"></td>
 								<!--	<td th:text="${param.tipo}"></td> -->
-									<td>
 
-									<table style="width:80%;">
-									<tr><td style="width:40%; text-align:center; vertical-align:middle;">
-									<form action="/deletemenu" method="get">
-									<input class="form-control" name="id" type="hidden" th:value="${parametros.id}">
-										<div class="fa-hover col-lg-3 col-md-6">
-											<button type="submit">
-
-											<i class="fa fa-trash-o" style="font-size:25px;"></i>
-
-											</button>
-										</div>
-									</form>
-								</td>
-
-									<td style="width:40%; text-align:center; vertical-align:middle;">
-								<form action="/editmenu?fragment=editmenu" method="post">
-									<input class="form-control" name="id" type="hidden" th:value="${parametros.id}"> <!-- Mandar o id para o editar -->
-											<div class="fa-hover col-lg-3 col-md-6">
-											<button type="submit">
-
-											<i class="fa fa-trash-o" style="font-size:25px;"></i>
-
-											</button>
-										</div>
-									</form>
-
-									</td>
-								</tr>
-							</table>
+						
 
 								</tr>
 							</tbody>
