--- a/project/src/main/resources/templates/introduzir_rest.html
+++ b/project/src/main/resources/templates/introduzir_rest.html
@@ -79,8 +79,9 @@
                 <option value=""></option>
                 <option value="Comida Portuguesa">Comida Portuguesa</option>
                 <option value="Chines">Chinês</option>
-                <option value="Sushi">Sushi</option>
-                <option value="Fast-Food">Fast-Food</option>
+                <option value="Japones">Japonoês</option>
+                <option value="Indiano">Indiano</option>
+                <option value="Italiano">Italiano</option>
               </select>
             </div>
             <div class="form-inline">
