--- a/project/src/main/resources/templates/main.html
+++ b/project/src/main/resources/templates/main.html
@@ -392,8 +392,9 @@
                                 <input class="dropdown-item" value="Todos Restaurantes" type="submit" name="categoria">
                                 <input class="dropdown-item" value="Comida Portuguesa" text="Comida Portuguesa" type="submit" name="categoria">
                                 <input class="dropdown-item" value="Chines" text="Chines" type="submit" name="categoria">
-                                <input class="dropdown-item" value="Sushi" text="Sushi" type="submit" name="categoria">
-                                <input class="dropdown-item" value="Fast-Food" text="Fast-Food" type="submit" name="categoria">
+                                <input class="dropdown-item" value="Japones" text="Japones" type="submit" name="categoria">
+                                <input class="dropdown-item" value="Indiano" text="Indiano" type="submit" name="categoria">
+                                <input class="dropdown-item" value="Italiano" text="Italiano" type="submit" name="categoria">
                               </form>
                             </div>
 
