--- a/project/src/main/resources/templates/listar_mensagens.html
+++ b/project/src/main/resources/templates/listar_mensagens.html
@@ -26,7 +26,7 @@
 
 
                     <td>
-                    <form action="/nova_mensagem" method="get">
+                    <form action="/nova_mensagem?fragment=nova_mensagem" method="get">
                     <input class="form-control" name="id" type="hidden" th:value="${parametros.id}">
                       <div class="fa-hover col-lg-3 col-md-6">
                         <button type="submit">
