--- a/project/src/main/resources/templates/main.html
+++ b/project/src/main/resources/templates/main.html
@@ -498,7 +498,7 @@
                   <span th:include="editar_utilizadores::editar_utilizadores_frag"> </span>
                 </div>
 
-                <div th:case="nova_mensagem">
+                <div th:case="nova_mensagens">
                   <span th:include="nova_mensagem::nova_mensagem_frag"> </span>
                 </div>
 
