latitude e longitude bug resolvido

--- a/project/src/main/resources/templates/introduzir_rest.html
+++ b/project/src/main/resources/templates/introduzir_rest.html
@@ -50,11 +50,11 @@
             </div>
             <div class="form-group">
               <label for="exampleInputEmail1">Longitude:</label>
-              <input class="form-control" placeholder="-045677897" name="longitude" type="number" required>
+              <input class="form-control" placeholder="-045677897" name="longitude" type="number"  step="0.000000001" min="-10000" max="999" required>
             </div>
             <div class="form-group">
               <label for="exampleInputEmail1">Latitude:</label>
-              <input class="form-control" placeholder="4879090877" name="latitude" type="number" required>
+              <input class="form-control" placeholder="4879090877" name="latitude" type="number" step="0.000000001" min="-10000" max="999" required>
             </div>
             <input type="hidden" name="dia1" value="Encerrado" id="dia1">
             <input type="hidden" name="dia2" value="Encerrado" id="dia2">
