--- a/project/src/main/resources/templates/main.html
+++ b/project/src/main/resources/templates/main.html
@@ -514,6 +514,10 @@
                   <span th:include="maps::maps_frag"> </span>
                 </div>
 
+                <div th:case="maps">
+                  <span th:include="maps::maps_frag"> </span>
+                </div>
+
               </div>
 
                         <div class="row">
