--- a/project/src/main/resources/templates/mainempprofile.html
+++ b/project/src/main/resources/templates/mainempprofile.html
@@ -188,83 +188,6 @@
                                 </li>
                             </ul>
                         </li>
-
-                        <li>
-                            <a href="/lista_users_app?fragment=listagem_users">
-                                <i class="far fa-check-square"></i>Usuários da Aplicação</a>
-                        </li>
-
-                        <li>
-                            <a href="/nova_mensagem?fragment=mensagens">
-                                <i class="far fa-check-square"></i>Caixa de Entrada</a>
-                        </li>
-
-                        <li>
-                            <a href="form.html">
-                                <i class="far fa-check-square"></i>Forms</a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <i class="fas fa-calendar-alt"></i>Calendar</a>
-                        </li>
-                        <li>
-                            <a href="map.html">
-                                <i class="fas fa-map-marker-alt"></i>Maps</a>
-                        </li>
-                        <li class="has-sub">
-                            <a class="js-arrow" href="#">
-                                <i class="fas fa-copy"></i>Pages</a>
-                            <ul class="list-unstyled navbar__sub-list js-sub-list">
-                                <li>
-                                    <a href="/login">Login2</a>
-                                </li>
-                                <li>
-                                    <a href="http://18.222.203.109:6997/registar">Registar</a>
-                                </li>
-                                <li>
-                                    <a href="forget-pass.html">Forget Password</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="has-sub">
-                            <a class="js-arrow" href="#">
-                                <i class="fas fa-desktop"></i>UI Elements</a>
-                            <ul class="list-unstyled navbar__sub-list js-sub-list">
-                                <li>
-                                    <a href="button.html">Button</a>
-                                </li>
-                                <li>
-                                    <a href="badge.html">Badges</a>
-                                </li>
-                                <li>
-                                    <a href="tab.html">Tabs</a>
-                                </li>
-                                <li>
-                                    <a href="card.html">Cards</a>
-                                </li>
-                                <li>
-                                    <a href="alert.html">Alerts</a>
-                                </li>
-                                <li>
-                                    <a href="progress-bar.html">Progress Bars</a>
-                                </li>
-                                <li>
-                                    <a href="modal.html">Modals</a>
-                                </li>
-                                <li>
-                                    <a href="switch.html">Switchs</a>
-                                </li>
-                                <li>
-                                    <a href="grid.html">Grids</a>
-                                </li>
-                                <li>
-                                    <a href="fontawesome.html">Fontawesome Icon</a>
-                                </li>
-                                <li>
-                                    <a href="typo.html">Typography</a>
-                                </li>
-                            </ul>
-                        </li>
                     </ul>
                 </nav>
             </div>
@@ -460,8 +383,28 @@
           }
 
           });
+        </script>
+        <script>
+
+          $(document).ready(function(){
+
+            $('#').click(function(){
+                var refresh = $('#').val();
+
+                if()
+            });
+
+          });
 
         </script>
+
+        <script type="text/JavaScript">
+                <!--
+                   function AutoRefresh( t ) {
+                      setTimeout("location.reload(true);", t);
+                   }
+                //-->
+             </script>
 
 </body>
 
